--- a/sass/web-dev-intro/day1/3-flexbox-grid/floats.html
+++ b/sass/web-dev-intro/day1/3-flexbox-grid/floats.html
@@ -10,26 +10,26 @@
 <body>
 	<div class="wrapper">
 <!-- row 1, 4 individual boxes -->
-		<div class="main-flex-container">
-			<article class="main-row">
+		<div class="row">
+			<article class="col-1">
 				<h3 class="article-title">Boston Cream Pie</h3>
 				<img src="img/boston-cream.jpg" alt="Boston creme pie.">
 			    <p class="article-text">Boston's famous dessert, a combination of yellow cake, vanilla pudding, and chocolate frosting.
 			    <span class="article-more"><a href="http://www.foodnetwork.com/recipes/boston-cream-pie-recipe0-1908702">Read more &gt;&gt;</a></span></p>
 			</article>
-			<article class="main-row">
+			<article class="col-1">
 		    	<h3 class="article-title">Coconut Cream Pie</h3>
 		    	<img src="img/coconut-cream.jpg" alt="Coconut cream pie.">
 		    	<p class="article-text">Coconut cream pie will take you to an island escape. Especially delicious in winter.
 		    	<span class="article-more"><a href="https://www.favfamilyrecipes.com/coconut-cream-pie-2/">Read more &gt;&gt;</a></span></p>
 		    </article>
-		    <article class="main-row">
+		    <article class="col-1">
 		    	<h3 class="article-title">Key Lime Pie</h3>
 		    	<img src="img/keylime-pie.jpg" alt="Key lime pie.">
 		    	<p class="article-text">Key lime pie is based on the tiny key limes from Florida. These limes are less sour than conventional limes. 
 		    	<span class="article-more"><a href="https://www.epicurious.com/recipes/food/views/key-lime-pie-108125" target="_blank">Read more &gt;&gt;</a></span></p>
 		    </article>
-		    <article class="main-row">
+		    <article class="col-1">
 		    	<h3 class="article-title">Pumpkin Pie</h3>
 		    	<img src="img/pumpkin-pie.jpg" alt="Pumpkin pie.">
 		    	<p class="article-text">A staple of every Thanksgiving dinner table, pumpkin pie is delicious any time of year.
@@ -37,14 +37,14 @@
 		    </article>
 		</div>
 <!-- row 2, 2 boxes spanning 2 rows -->
-		<div class="second-flex-container second-sm-flex-container second-lg-flex-container">
-		    <article class="second-row">
+		<div class="row">
+		    <article class="col-2">
 		    	<h3 class="article-title">Key Lime Pie</h3>
 		    	<img src="img/keylime-pie.jpg" alt="Key lime pie.">
 		    	<p class="article-text">Key lime pie is based on the tiny key limes from Florida. These limes are less sour than conventional limes.
 		    	<span class="article-more"><a href="https://www.epicurious.com/recipes/food/views/key-lime-pie-108125" target="_blank">Read more &gt;&gt;</a></span></p>
 		    </article>
-		    <article class="second-row">
+		    <article class="col-2">
 		    	<h3 class="article-title">Pumpkin Pie</h3>
 		    	<img src="img/pumpkin-pie.jpg" alt="Pumpkin pie.">
 		    	<p class="article-text">A staple of every Thanksgiving dinner table, pumpkin pie is delicious any time of year.
@@ -53,14 +53,14 @@
 		</div>
 
 <!-- row 4: narrow left column, wide right/content column -->
-		<div class="third-flex-container third-sm-flex-container third-lg-flex-container">
-			<article class="third-row-1">
+		<div class="row">
+			<article class="col-1 col-3-bg">
 				<h3 class="article-title">Boston Cream Pie</h3>
 			    <img src="img/boston-cream.jpg" alt="Boston creme pie.">
 			    <p class="article-text">Boston's famous dessert, a combination of yellow cake, vanilla pudding, and chocolate frosting.
 			    <span class="article-more"><a href="http://www.foodnetwork.com/recipes/boston-cream-pie-recipe0-1908702">Read more &gt;&gt;</a></span>
 			</article>
-			<article class="third-row-2">
+			<article class="col-3 col-3-bg">
 		    	<h3 class="article-title">Coconut Cream Pie</h3>
 		    	<img src="img/coconut-cream.jpg" alt="Coconut cream pie.">
 		    	<p class="article-text">Coconut cream pie will take you to an island escape. Especially delicious in winter.
@@ -68,8 +68,8 @@
 		    </article>
 		</div>
 <!-- row 4: one column -->
-		<div class="fourth-flex-container">
-			<article class="fourth-row">
+		<div class="row">
+			<article class="col-4">
 				<h3 class="article-title">Boston Cream Pie</h3>
 			    <img src="img/boston-cream.jpg" alt="Boston creme pie.">
 			    <p class="article-text">Boston's famous dessert, a combination of yellow cake, vanilla pudding, and chocolate frosting.
