--- a/sass/web-dev-intro/day1/3-flexbox-grid/floats.html
+++ b/sass/web-dev-intro/day1/3-flexbox-grid/floats.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="wrapper">
 		<!-- row 1, 4 individual boxes -->
-		<div class="row">
+		<div class="row row-reverse">
 			<article class="col-1">
 				<h3 class="article-title">Boston Cream Pie</h3>
 				<img src="img/boston-cream.jpg" alt="Boston creme pie.">
