--- a/sass/frontend mentor practice/huddle-landing-page-with-alternating-feature-blocks-master/index.html
+++ b/sass/frontend mentor practice/huddle-landing-page-with-alternating-feature-blocks-master/index.html
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="card-1">
+    <div class="card-1 card-1-reverse">
       <div class="card-img">
         <img src="./images/illustration-flowing-conversation.svg" alt="Flowing Conversation">
       </div>
